--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QWERTY Territory Battle</title>
+    <title>QWERTOPIA Territory Battle</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
         body {
@@ -378,8 +378,8 @@
     <!-- Modal -->
     <div id="howToPlayModal" class="modal-overlay hidden">
         <div class="modal-content">
-            <h2 class="city">How to play <b>QWERTYMUNGOUS</b>, the spelling game about gaining the most keyboard territory</h2>
-            <p class="bum">
+            <h2 class="city">How to play <b>QWERTOPIA</b>, the word game where you compete to gain the most keyboard territory!</h2>
+            <p class="arse">
                 <b>1:</b> Your word must begin with a letter from your side (red/blue).
                 <br>
                 <b>2:</b> Then you try to use as many of your opponent's letters to gain territorial control.
