--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
             padding: 10px;
         } 
 
-        .city, .bum, .arse {
+        .city, .bum {
             font-family: 'Montserrat';
         }
 
+     .arse {
+            font-family: 'Lora';
+        }
+        
         /* Modal button styling */
         #howToPlayButton {
             position: fixed;
