--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QWERTOPIA Territory Battle</title>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Montserrat&family=Lora&family=Inter:wght@400;500;700&display=swap"" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Montserrat&family=Poppins&family=Inter:wght@400;500;700&display=swap"" rel="stylesheet">
     <style>
         body {
             display: flex;
@@ -48,7 +48,7 @@
         }
 
      .arse {
-            font-family: 'Lora';
+            font-family: 'Poppins';
         }
         
         /* Modal button styling */
