--- a/index.html
+++ b/index.html
@@ -404,7 +404,11 @@
                 <br>
                 <b>2:</b> Then you try to use as many of your opponent's letters to gain territorial control.
                 <br>
-                <b>3:</b> Each player gets exactly 5 turns. Who will control more territory after both players have submitted 5 words?
+                <b>3:</b> Each player gets exactly 5 turns.
+                <br>
+                <b>4:</b> Every subsequent turn requires you to start with 2, 3, 4 or 5 of the letters you control. 
+                <br>
+                <b>5:</b> The winner is the keyboard warrior controls more territory after both players have submitted 5 words. 
                 <br><br>
             </p>
             <button id="closeModalButton">Got it!</button>
