--- a/index.html
+++ b/index.html
@@ -270,7 +270,9 @@
             margin: 0;
             font-size: 0.85rem;
             max-height: 10rem;
-            overflow-y: auto;
+            overflow-x: visible; /* Remove horizontal scroll */
+            white-space: normal; /* Allow wrapping */
+            word-break: break-word; /* Break long words */
             color: #e5e7eb;
             width: 40%;
         }
@@ -308,6 +310,11 @@
     box-shadow: 0 1px 4px rgba(0,0,0,0.08);
     border: 1px solid #6b7280;
     font-family: inherit;
+    white-space: normal; /* Allow wrapping inside chip */
+    word-break: break-word; /* Break long words inside chip */
+    display: inline-block;
+    max-width: 100%; /* Ensures it doesn't overflow its parent */
+}
 }
 .word-num {
     color: #9ca3af;
