--- a/index.html
+++ b/index.html
@@ -327,8 +327,9 @@
     padding-left: 0;
 }
 .word-list li {
-    list-style: none;
-    margin-bottom: 0.1em;
+    display: block;
+    margin-bottom: 0.2em;
+    width: 100%;
 }
         /* Game info display */
         #game-info {
