--- a/index.html
+++ b/index.html
@@ -29,19 +29,11 @@
             color: white;
             padding: 10px;
         }
-        .bum {
-            background-color: Indianred;
-            color: white;
-            padding: 10px;
-        }
         .arse {
             background-color: steelblue;
             color: white;
             padding: 10px;
             font-family: 'Poppins';
-        }
-        .city, .bum {
-            font-family: 'Montserrat';
         }
         #howToPlayButton {
             position: fixed;
@@ -134,6 +126,7 @@
             background-color: #6b7280;
             color: #f9fafb;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            position: relative;
         }
         .key:hover {
             background-color: #9ca3af;
@@ -150,6 +143,11 @@
             background-color: rgba(56, 189, 248, 0.2);
             border-color: rgba(56, 189, 248, 0.4);
             color: #38bdf8;
+        }
+        .key.vowel-neutral {
+            background-color: #fbbf24 !important;
+            border-color: #fbbf24 !important;
+            color: #222 !important;
         }
         .key.controlled {
             opacity: 1;
@@ -228,6 +226,18 @@
             font-size: 1.3rem;
             color: #f9fafb;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+            padding: 0.7em 1.1em;
+            border-radius: 0.5em;
+            display: inline-block;
+            transition: background 0.3s,color 0.3s;
+        }
+        #current-player.player1 {
+            color: #fff;
+            background: #f87171;
+        }
+        #current-player.player2 {
+            color: #fff;
+            background: #38bdf8;
         }
         #message-box {
             margin-top: 1.5rem;
@@ -325,78 +335,6 @@
             color: #d1d5db;
             text-align: center;
         }
-        @media (max-width: 768px) {
-            #keyboard {
-                grid-template-columns: repeat(10, 2.5rem);
-                grid-template-rows: repeat(3, 2.3rem);
-                gap: 0.3rem;
-            }
-            .key {
-                font-size: 0.8rem;
-                border-width: 0.1rem;
-                border-radius: 0.375rem;
-            }
-            #word-input input,
-            #word-input button {
-                font-size: 0.9rem;
-                padding: 0.6rem;
-                border-radius: 0.375rem;
-            }
-            .word-list {
-                font-size: 0.7rem;
-                max-height: 8rem;
-            }
-            .word-list-title {
-                font-size: 0.95rem;
-            }
-            #message-box {
-                font-size: 0.9rem;
-                min-width: 90%;
-                padding: 0.8rem;
-                border-radius: 0.375rem;
-            }
-            .word-list-container {
-                flex-direction: column;
-                align-items: center;
-                margin-top: 2.5rem;
-            }
-            .word-list {
-                width: 80%;
-                margin-bottom: 1.25rem;
-                max-height: 7rem;
-            }
-        }
-        @media (max-width: 480px) {
-            #keyboard {
-                grid-template-columns: repeat(10, 2.2rem);
-                grid-template-rows: repeat(3, 2rem);
-                gap: 0.25rem;
-            }
-            .key {
-                font-size: 0.7rem;
-                border-width: 0.08rem;
-                border-radius: 0.25rem;
-            }
-            #word-input input,
-            #word-input button {
-                font-size: 0.8rem;
-                padding: 0.5rem;
-                border-radius: 0.25rem;
-            }
-            .word-list {
-                font-size: 0.6rem;
-                max-height: 6rem;
-            }
-            .word-list-title {
-                font-size: 0.85rem;
-            }
-            #message-box {
-                font-size: 0.8rem;
-                min-width: 95%;
-                padding: 0.6rem;
-                border-radius: 0.25rem;
-            }
-        }
         .key-frozen {
             outline: 3px solid #b3ecff !important;
             background-image: repeating-linear-gradient(135deg, #b3ecff 0 8px, transparent 8px 12px);
@@ -431,13 +369,15 @@
     <!-- Modal -->
     <div id="howToPlayModal" class="modal-overlay hidden">
         <div class="modal-content">
-            <h2 class="city">How to play <b>QWERTOPIA</b>, the word game where you compete to gain the most keyboard territory!</h2>
+            <h2 class="city">How to play <b>QWERTOPIA</b></h2>
             <p class="arse">
                 <b>1:</b> Your word must begin with a letter from your side (red/blue).<br>
-                <b>2:</b> Then you try to use as many of your opponent's letters to gain territorial control.<br>
+                <b>2:</b> Try to use as many of your opponent's letters as possible to gain territorial control.<br>
                 <b>3:</b> Each player gets exactly 5 turns.<br>
                 <b>4:</b> Every subsequent turn requires you to start with 2, 3, 4 or 5 of the letters you control.<br>
-                <b>5:</b> The winner is the keyboard warrior controls more territory after both players have submitted 5 words.<br><br>
+                <b>5:</b> <b>Freeze Rule:</b> If your word contains Q, X, or Z, you may nominate an opponent’s key to freeze for one round (it can't be captured on their next turn).<br>
+                <b>6:</b> One vowel (highlighted in yellow) is neutral and can never be captured. You can always play, even if you lose all other vowels.<br>
+                <b>7:</b> The winner is the warrior who controls more keys at the end of the game!
             </p>
             <button id="closeModalButton">Got it!</button>
         </div>
@@ -447,9 +387,9 @@
         <div id="word-input">
             <input type="text" id="word-input-box" placeholder="Enter word">
             <button id="submit-word">Submit</button>
-            <button id="pass-turn" style="background:#fbbf24;color:#222;">Pass Turn</button>
+            <button id="pass-turn" style="background:#fbbf24;color:#222;" disabled>Pass Turn</button>
         </div>
-        <div id="current-player">Current Player: 1</div>
+        <div id="current-player" class="player1">Current Player: 1</div>
         <div id="game-info">Player 1: 0/5 words | Player 2: 0/5 words</div>
         <div id="message-box">Welcome to QWERTY Territory Battle!</div>
         <div class="word-list-container">
@@ -482,6 +422,11 @@
             ['A', 'S', 'D', 'F', 'G', 'H', 'J', 'K', 'L'],
             ['Z', 'X', 'C', 'V', 'B', 'N', 'M']
         ];
+
+        // Choose neutral vowel
+        const ALL_VOWELS = ['A','E','I','O','U'];
+        const NEUTRAL_VOWEL = 'E'; // Always neutral for this version
+
         let player1Keys = [];
         let player2Keys = [];
         let board = {};
@@ -493,6 +438,7 @@
         let player2Plays = 0;
         let frozenKeys = new Set();
         let freezeQueue = [];
+
         // ==== MODAL HANDLING ====
         howToPlayButton.addEventListener('click', () => {
             howToPlayModal.classList.remove('hidden');
@@ -505,6 +451,7 @@
                 howToPlayModal.classList.add('hidden');
             }
         });
+
         // ==== KEYBOARD BLOCK RANDOMIZATION ====
         function randomizeKeyboardBlocks() {
             player1Keys = [];
@@ -520,7 +467,11 @@
                     player1Keys.push(...blocks[1]);
                 }
             });
+            // Remove neutral vowel from player keys if present
+            player1Keys = player1Keys.filter(l => l !== NEUTRAL_VOWEL);
+            player2Keys = player2Keys.filter(l => l !== NEUTRAL_VOWEL);
         }
+
         // ==== KEYBOARD RENDERING ====
         function createKeyboard() {
             keyboardContainer.innerHTML = '';
@@ -529,7 +480,12 @@
                     const key = document.createElement('div');
                     key.classList.add('key');
                     key.textContent = keyChar;
-                    if (player1Keys.includes(keyChar)) {
+
+                    // Neutral vowel logic
+                    if (keyChar === NEUTRAL_VOWEL) {
+                        key.classList.add('vowel-neutral');
+                        board[keyChar] = 0; // 0 means neutral, cannot be captured
+                    } else if (player1Keys.includes(keyChar)) {
                         key.classList.add('player1');
                         board[keyChar] = 1;
                     } else if (player2Keys.includes(keyChar)) {
@@ -544,6 +500,7 @@
             });
             updateFrozenKeyStyles();
         }
+
         // ==== FREEZE NOMINATION LOGIC ====
         let freezeNominationActive = false;
         let freezeResolve = null;
@@ -556,6 +513,7 @@
                 }
             });
             messageBox.textContent += "\nClick an opponent's key to freeze it for one round!";
+            updatePlayableState();
             return new Promise(resolve => { freezeResolve = resolve; });
         }
         function freezeKeyClickHandler(e) {
@@ -568,10 +526,13 @@
             freezeNominationActive = false;
             if (freezeResolve) freezeResolve(letter);
             freezeResolve = null;
+            updatePlayableState();
         }
+
         // ==== GAME HELPERS ====
         function getLetterColor(letter) {
             letter = letter.toUpperCase();
+            if (letter === NEUTRAL_VOWEL) return 'neutral';
             if (board[letter] === 1) return 'red';
             if (board[letter] === 2) return 'blue';
             return 'none';
@@ -581,7 +542,7 @@
             let count = 0;
             for (let i = 0; i < word.length; i++) {
                 const color = getLetterColor(word[i]);
-                if ((player === 1 && color === 'red') || (player === 2 && color === 'blue')) {
+                if ((player === 1 && color === 'red') || (player === 2 && color === 'blue') || color === 'neutral') {
                     count++;
                 } else {
                     break;
@@ -612,16 +573,11 @@
             }
         }
         function playerHasPlayableVowel(player) {
-            const vowels = ['A', 'E', 'I', 'O', 'U'];
-            return vowels.some(letter => board[letter] === player);
+            // Neutral vowel is always playable, so always return true
+            return true;
         }
         function updatePlayableState() {
-            if (!playerHasPlayableVowel(currentPlayer)) {
-                submitWordButton.disabled = true;
-                wordInput.disabled = true;
-                passTurnButton.disabled = false;
-                messageBox.textContent = "No playable starting vowels! You must pass your turn.";
-            } else if (freezeNominationActive) {
+            if (freezeNominationActive) {
                 submitWordButton.disabled = true;
                 wordInput.disabled = true;
                 passTurnButton.disabled = true;
@@ -657,7 +613,7 @@
         function getKeysForWord(word) {
             const keys = new Set();
             for (const char of word.toUpperCase()) {
-                if (player1Keys.includes(char) || player2Keys.includes(char)) {
+                if (player1Keys.includes(char) || player2Keys.includes(char) || char === NEUTRAL_VOWEL) {
                     keys.add(char);
                 }
             }
@@ -667,17 +623,16 @@
             const keyElements = keyboardContainer.querySelectorAll('.key');
             keyElements.forEach((keyElement) => {
                 const keyChar = keyElement.textContent;
-                if (board[keyChar] === 1) {
-                    keyElement.classList.add('player1', 'controlled');
-                    keyElement.classList.remove('player2', 'empty');
+                keyElement.classList.remove('player1','player2','controlled','empty','vowel-neutral');
+                if (keyChar === NEUTRAL_VOWEL) {
+                    keyElement.classList.add('vowel-neutral');
+                } else if (board[keyChar] === 1) {
+                    keyElement.classList.add('player1','controlled');
                 } else if (board[keyChar] === 2) {
-                    keyElement.classList.add('player2', 'controlled');
-                    keyElement.classList.remove('player1', 'empty');
+                    keyElement.classList.add('player2','controlled');
                 } else {
-                    keyElement.classList.remove('player1', 'player2', 'controlled');
                     keyElement.classList.add('empty');
                 }
-                // frozen keys
                 if (frozenKeys.has(keyChar)) {
                     keyElement.classList.add('key-frozen');
                 } else {
@@ -686,8 +641,8 @@
             });
         }
         function updateGameInfo() {
-            const p1 = Object.values(board).filter(v => v === 1).length;
-            const p2 = Object.values(board).filter(v => v === 2).length;
+            const p1 = Object.keys(board).filter(k => board[k] === 1).length;
+            const p2 = Object.keys(board).filter(k => board[k] === 2).length;
             gameInfoDisplay.textContent = `Player 1: ${player1Plays}/5 words | Player 2: ${player2Plays}/5 words | Keys: P1 [${p1}] - P2 [${p2}]`;
         }
         function renderWordLists() {
@@ -712,6 +667,7 @@
                 let player1ControlCount = 0;
                 let player2ControlCount = 0;
                 for (const key in board) {
+                    if (key === NEUTRAL_VOWEL) continue; // skip neutral
                     if (board[key] === 1) player1ControlCount++;
                     else if (board[key] === 2) player2ControlCount++;
                 }
@@ -730,18 +686,13 @@
         }
         // ==== MAIN GAME LOGIC ====
         passTurnButton.addEventListener('click', () => {
-            if (!gameOver && !freezeNominationActive) {
-                messageBox.textContent = `Player ${currentPlayer} passed – no playable vowels.`;
-                if (currentPlayer === 1) player1Plays++;
-                else player2Plays++;
-                updateGameInfo();
-                checkForWin();
-                if (!gameOver) switchPlayer();
-            }
+            // Pass is always disabled
         });
         function switchPlayer() {
             currentPlayer = (currentPlayer === 1) ? 2 : 1;
             currentPlayerDisplay.textContent = `Current Player: ${currentPlayer}`;
+            currentPlayerDisplay.classList.remove('player1','player2');
+            currentPlayerDisplay.classList.add(currentPlayer === 1 ? 'player1' : 'player2');
             const round = currentPlayer === 1 ? player1Plays : player2Plays;
             unfreezeKeys(round);
             updateFrozenKeyStyles();
@@ -757,18 +708,15 @@
             const required = getRequiredColoredLetters(currentPlayer);
             const startingColorCount = countStartingColoredLetters(word, currentPlayer);
             if (startingColorCount < required) {
-                messageBox.textContent = `Word must start with at least ${required} ${currentPlayer === 1 ? 'red' : 'blue'} letter(s) in a row for this round!`;
+                messageBox.textContent = `Word must start with at least ${required} ${currentPlayer === 1 ? 'red' : 'blue'} (or yellow) letter(s) in a row for this round!`;
                 wordInput.value = '';
                 return;
             }
             const startingLetter = word[0];
-            if (currentPlayer === 1 && board[startingLetter] !== 1) {
-                messageBox.textContent = 'Word must start with a letter you control.';
-                wordInput.value = '';
-                return;
-            }
-            if (currentPlayer === 2 && board[startingLetter] !== 2) {
-                messageBox.textContent = 'Word must start with a letter you control.';
+            // Must start with player's letter or neutral vowel
+            if (!((currentPlayer === 1 && (board[startingLetter] === 1 || startingLetter === NEUTRAL_VOWEL))
+                || (currentPlayer === 2 && (board[startingLetter] === 2 || startingLetter === NEUTRAL_VOWEL)))) {
+                messageBox.textContent = 'Word must start with a letter you control or the yellow neutral vowel.';
                 wordInput.value = '';
                 return;
             }
@@ -779,14 +727,15 @@
                     return;
                 }
                 const keysToControl = getKeysForWord(word);
-                // Only capture keys that are not frozen!
                 let opponentControlledKeys = keysToControl.filter(key =>
                     ((currentPlayer === 1 && board[key] === 2) ||
                     (currentPlayer === 2 && board[key] === 1)) &&
-                    !frozenKeys.has(key)
+                    !frozenKeys.has(key) &&
+                    key !== NEUTRAL_VOWEL // can't capture neutral vowel
                 );
                 opponentControlledKeys.forEach(key => board[key] = currentPlayer);
                 updateBoardDisplay();
+
                 if (currentPlayer === 1) {
                     player1Words.push(word);
                     player1Plays++;
@@ -796,17 +745,23 @@
                 }
                 renderWordLists();
                 updateGameInfo();
+
                 let msg = '';
                 if (opponentControlledKeys.length === 0) {
                     msg = `${word} submitted! No opponent letters captured.`;
                 } else {
                     msg = `${word} captured ${opponentControlledKeys.length} letters!`;
                 }
-                // --- NOMINATE FREEZE FEATURE ---
+
+                // --- Q/X/Z triggers freeze nomination ---
+                let freezeEligible = false;
                 if (["Q", "X", "Z"].some(ltr => word.includes(ltr))) {
+                    freezeEligible = true;
+                }
+                if (freezeEligible) {
                     let oppPlayer = currentPlayer === 1 ? 2 : 1;
                     let oppKeys = Object.keys(board).filter(
-                        k => board[k] === oppPlayer && !frozenKeys.has(k)
+                        k => board[k] === oppPlayer && !frozenKeys.has(k) && k !== NEUTRAL_VOWEL
                     );
                     if (oppKeys.length) {
                         updatePlayableState();
@@ -828,6 +783,7 @@
                 wordInput.value = '';
             });
         }
+
         // ==== INIT GAME ====
         randomizeKeyboardBlocks();
         createKeyboard();
